test/sema/if.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo() -> void {}

fn bar() -> i32 { return 1; }

fn main() -> void {
    // CHECK: [[# @LINE + 1 ]]:12: error: unexpected type in condition 'void'
    if (foo()) {}

    if (bar()) {}
    
    else if (foo()) {}
    // CHECK: [[# @LINE - 1 ]]:17: error: unexpected type in condition 'void'
}
// CHECK-NOT: {{.*}}
